--- a/src/style.css
+++ b/src/style.css
@@ -93,7 +93,7 @@ body {
     cursor: url(../img/hammer.png), auto;
 }
 
-.mole-img {
+.member-img {
     display: block;
     height: auto;
     width: 100%;
