--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ html, body {
 }
 
 body {
-    background: url(../img/background.png) no-repeat;
+    background: url(../img/background.png)
     background-size: cover;
     display: flex;
     flex-direction: column;
