--- a/src/style.css
+++ b/src/style.css
@@ -17,11 +17,13 @@ html, body {
 }
 
 body {
-    background: url(../img/background.png)
+    background: url(../img/background.jpg) no-repeat center center fixed;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* 
+      center center — центрирует изображение
+      fixed — фиксирует фон относительно окна браузера
+      cover — масштабирует изображение, чтобы оно заполнило весь экран
+    */
 }
 
 #game-info {
@@ -75,7 +77,7 @@ body {
 }
 
 #score span {
-    color: #000;
+    color: #fff;
     font-size: 64px;
     font-weight: 700;
 }
