--- a/src/style.css
+++ b/src/style.css
@@ -307,12 +307,12 @@ body {
     padding: 15%;
     transition: all 0.3s ease;
     filter: hue-rotate(-40deg) brightness(0.9);
-    transform: scale(0.8) rotateY(45deg);
+    transform: scale(0.8);
     opacity: 0.7;
     backface-visibility: hidden;
 }
 .member-img:hover {
-    transform: scale(1.1) rotateY(0);
+    transform: scale(1.1);
     filter: hue-rotate(-40deg) brightness(1.2);
     opacity: 1;
     z-index: 10;
